Add module for Paper

--- a/settings.gradle
+++ b/settings.gradle
@@ -25,6 +25,7 @@ include (
         'spark-api',
         'spark-common',
         'spark-bukkit',
+        'spark-paper',
         'spark-bungeecord',
         'spark-velocity',
         'spark-velocity4',
